--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,9 +1,11 @@
 [versions]
 protobuf-plugin = "0.9.5"
+shadow-plugin = "9.2.2"
 protobuf = "3.25.8"
 
 [plugins]
 protobuf = { id = "com.google.protobuf", version.ref = "protobuf-plugin" }
+shadow = { id = "com.gradleup.shadow", version.ref = "shadow-plugin" }
 
 [libraries]
 protoc = { module = "com.google.protobuf:protoc", version.ref = "protobuf" }
