build: axion-release plugin

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,4 +1,5 @@
 [versions]
+axion-plugin = "1.21.0"
 protobuf-plugin = "0.9.5"
 shadow-plugin = "9.2.2"
 protobuf = "3.25.8"
@@ -6,6 +7,7 @@ protobuf = "3.25.8"
 [plugins]
 protobuf = { id = "com.google.protobuf", version.ref = "protobuf-plugin" }
 shadow = { id = "com.gradleup.shadow", version.ref = "shadow-plugin" }
+versioning = { id = "pl.allegro.tech.build.axion-release", version.ref = "axion-plugin" }
 
 [libraries]
 protoc = { module = "com.google.protobuf:protoc", version.ref = "protobuf" }
