--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,8 @@
 name: CI
 on: push
+permissions:
+  contents: write
+  pull-requests: write
 jobs:
   build:
     if: ${{ ! (startsWith(github.event.head_commit.message, 'chore') || startsWith(github.event.head_commit.message, 'docs')) }}
