ci: upload standalone jar to release

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,4 +45,6 @@ jobs:
         ORG_GRADLE_PROJECT_sonatypeSigningSecret: ${{ secrets.GPG_SECRET }}
         ORG_GRADLE_PROJECT_sonatypeMavenCentralUser: ${{ secrets.SONATYPE_USER }}
         ORG_GRADLE_PROJECT_sonatypeMavenCentralPassword: ${{ secrets.SONATYPE_PASSWORD }}
-      run: ./gradlew -Prelease.forceVersion=$RELEASE_VERSION createRelease && ./gradlew publishToSonatype
+      run: |
+        gh release upload $RELEASE_VERSION ./build/libs/comdb2-jdbc-$RELEASE_VERSION-standalone.jar
+        ./gradlew -Prelease.forceVersion=$RELEASE_VERSION createRelease && ./gradlew publishToSonatype
