ci: GH_TOKEN env for Publish step

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,7 @@ jobs:
     - name: Publish
       if: ${{ steps.release.outputs.release_created }}
       env:
+        GH_TOKEN: ${{ github.token }}
         RELEASE_VERSION: ${{ steps.release.outputs.tag_name }}
         ORG_GRADLE_PROJECT_sonatypeSigningKey: ${{ secrets.GPG_KEY }}
         ORG_GRADLE_PROJECT_sonatypeSigningSecret: ${{ secrets.GPG_SECRET }}
