--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,5 +47,7 @@ jobs:
         ORG_GRADLE_PROJECT_sonatypeMavenCentralUser: ${{ secrets.SONATYPE_USER }}
         ORG_GRADLE_PROJECT_sonatypeMavenCentralPassword: ${{ secrets.SONATYPE_PASSWORD }}
       run: |
+        ./gradlew -Prelease.forceVersion=$RELEASE_VERSION createRelease
+        ./gradlew assemble
         gh release upload $RELEASE_VERSION ./build/libs/comdb2-jdbc-$RELEASE_VERSION-standalone.jar
-        ./gradlew -Prelease.forceVersion=$RELEASE_VERSION createRelease && ./gradlew publishToSonatype
+        ./gradlew publishToSonatype
